# lang-lut

./: .glottologid.txt  .taskcluster.yml  AUTHORS  CITATION.cff  Links.md  Makefile  Makefile.in  README  README.markdown  README.md  WhatIsThis.jspwiki  _config.yml  aclocal.m4  adjectives-affixes-fst-src.md  adjectives-stems-fst-src.md  adjectives-stems.md  adpositions-affixes-fst-src.md  adpositions-stems-fst-src.md  adpositions-stems.md  adverbs-affixes-fst-src.md  adverbs-stems-fst-src.md  autogen.sh  config.status  configure  configure.ac  conjunctors-stems-fst-src.md  disambiguator-cg3-src.md  giella-lut.pc.in  index-header.md  index.md  interjections-stems-fst-src.md  interjections-stems.md  lemmacount.json  lut.md  manifest.toml  manifest.toml.in  metadata.json  nouns-affixes-fst-src.md  nouns-affixes.md  nouns-stems-fst-src.md  (+80 more)
.gut/: delta.toml  manifest.toml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
devtools/: test_ospell-office_suggestions.sh  test_voikkospell_suggestions.sh
doc/: Links.jspwiki  Makefile  Makefile.in  SouthernPugetSoundSalishDocumentation.jspwiki  WhatIsThis.jspwiki  index.xml  link-header.jspwiki  lut.jspwiki  preamble.jspwiki  root-morphology.jspwiki  site.xml  slh.jspwiki  tabs.xml
src/: Makefile  Makefile.am  Makefile.in  analyser-gt-desc.hfst  analyser-gt-desc.tmp.hfst  analyser-gt-desc.tmp.xfst  analyser-gt-norm.hfst  analyser-gt-norm.tmp.hfst  analyser-gt-norm.xfst  analyser-raw-gt-desc.xfst  generator-gt-desc.hfst  generator-gt-desc.tmp.xfst  generator-gt-norm.tmp.hfst  generator-gt-norm.xfst  generator-raw-gt-desc.hfst  transcriptor-clock2text-desc.hfst  transcriptor-clock2text-desc.xfst  transcriptor-date2text-desc.hfst  transcriptor-date2text-desc.xfst  transcriptor-numbers2text-desc.hfst  transcriptor-numbers2text-desc.xfst  transcriptor-text2clock-desc.hfst  transcriptor-text2clock-desc.xfst  transcriptor-text2date-desc.hfst  transcriptor-text2date-desc.xfst  transcriptor-text2numbers-desc.hfst  transcriptor-text2numbers-desc.xfst
src/cg3/: disambiguator.cg3
src/filters/: Makefile  Makefile.am.orig  Makefile.in  gttags.txt  make-optional-homonymy-tags.hfst  make-optional-homonymy-tags.xfst  make-optional-transitivity-tags.hfst  make-optional-transitivity-tags.xfst  make-optional-variant-tags.hfst  make-optional-variant-tags.xfst  remove-ABBR-strings.hfst  remove-ABBR-strings.xfst  remove-ACR-strings.hfst  remove-ACR-strings.xfst  remove-CLB-strings.hfst  remove-CLB-strings.xfst  remove-MinusSpell-strings.hfst  remove-MinusSpell-strings.xfst  remove-NA-strings.hfst  remove-NA-strings.xfst  remove-NG-strings.hfst  remove-NG-strings.xfst  remove-NGminip-strings.hfst  remove-NGminip-strings.xfst  remove-Orth_IPA-strings.hfst  remove-Orth_IPA-strings.xfst  remove-Orth_Strd-strings.hfst  remove-Orth_Strd-strings.xfst  remove-PUNCT-strings.hfst  remove-PUNCT-strings.xfst  remove-UseCirc-strings.hfst  remove-UseCirc-strings.xfst  remove-derivation-position-tags.hfst  remove-derivation-position-tags.xfst  remove-derivation-strings.hfst  remove-derivation-strings.xfst  remove-dialect-tags.hfst  remove-dialect-tags.xfst  remove-homonymy-tags.hfst  remove-homonymy-tags.xfst  (+26 more)
src/fst/: Makefile.am  phonology.twolc  root.lexc
src/fst/affixes/: .#adjectives.lexc  adjectives.lexc  adpositions.lexc  adverbs.lexc  nouns.lexc  prefixes.lexc  pronouns.lexc  propernouns.lexc  verbs.lexc
src/fst/filters/: Makefile.am  remove-letter-grave.regex
src/fst/incoming/: ospellTestwords
src/fst/morphology/: Makefile.am  phonology.twolc  root.lexc
src/fst/morphology/affixes/: adjectives.lexc  adverbs.lexc  nouns.lexc  prefixes.lexc  pronouns.lexc  propernouns.lexc  verbs.lexc
src/fst/morphology/stems/: adjectives.lexc  adpositions.lexc  adverbs.lexc  conjunctors.lexc  interjections.lexc  nouns.lexc  nouns_newwords.lexc  numerals.lexc  pronouns.lexc  propernouns.lexc  verbs.lexc
src/fst/orthography/: Makefile.am  spellrelax.regex  split-composed-chars.regex
src/fst/orthography/test/: Makefile.am
src/fst/stems/: adjectives.lexc  adpositions.lexc  adverbs.lexc  conjunctors.lexc  interjections.lexc  nouns.lexc  nouns_newwords.lexc  numerals.lexc  pronouns.lexc  propernouns.lexc  verbs.lexc
src/fst/test/gt-norm-yamls/: V-bechdub_gt-norm.yaml  V-kwedad_gt-norm.yaml
src/fst/transcriptions/: transcriptor-date-digit2text.lexc  transcriptor-numbers-digit2text.lexc  transcriptor-symbols2text.lexc
src/hyphenation/: Makefile  Makefile.in  hyphenation.hfst  hyphenation.xfst
src/morphology/: Makefile  Makefile.am  Makefile.in  root.lexc  slh-all.lexc  slh.lexc.hfst  slh.lexc.xfst
src/morphology/affixes/: adjectives.lexc  adpositions.lexc  adverbs.lexc  nouns.lexc  pronouns.lexc  propernouns.lexc  verbs.lexc
src/morphology/incoming/: ospellTestwords
src/morphology/stems/: adjectives.lexc  adverbs.lexc  interjections.lexc  nouns.lexc  nouns_newwords.lexc  numerals.lexc  prefixes.lexc  pronouns.lexc  propernouns.lexc  verbs.lexc
src/orthography/: Makefile  Makefile.am  Makefile.in  allcaps.hfst  allcaps.xfst  inituppercase.hfst  inituppercase.regex  inituppercase.xfst  spellrelax-mobile-keyboard.hfst  spellrelax-mobile-keyboard.xfst  spellrelax-nfc2nfd.regex  spellrelax-nfc2nfd.regex.sigma.nfc  spellrelax-nfc2nfd.regex.sigma.nfd  spellrelax.hfst  spellrelax.regex  spellrelax.xfst  spellrestrict-nfd2nfc.regex.sigma.nfc  spellrestrict-nfd2nfc.regex.sigma.nfd  split-composed-chars.regex
src/phonetics/: Makefile  Makefile.in
src/phonology/: Makefile  Makefile.in  lut-phon.twolc  slh-phon.hfst  slh-phon.twolc  slh-phon.xfst
src/syntax/: Makefile  Makefile.in  disambiguation.cg3
src/tagsets/: Makefile  Makefile.in
src/transcriptions/: Makefile  Makefile.in  numbers.lexc  transcriptor-abbrevs2text.lexc  transcriptor-clock-digit2text.lexc  transcriptor-clock2text-raw.hfst  transcriptor-clock2text-raw.xfst  transcriptor-date-digit2text.lexc  transcriptor-date2text-raw.hfst  transcriptor-date2text-raw.xfst  transcriptor-numbers-digit2text.lexc  transcriptor-numbers2text-raw.hfst  transcriptor-numbers2text-raw.xfst
(+94 files in other folders)
